# SunReactor

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  changes.patch  gemini-code-1783646326922.txt  install.sh
.github/workflows/: ci.yml
contrib/systemd/: sunreactord.service
docs/: DEVELOPMENT.md  RELIABILITY.md  TUI_UX_NOTES.md  systemd-user-unit.md
docs/testing/: real-hardware.md
examples/: config.toml  debug_solar2.rs  debug_solar_real.rs
scripts/: check-glibc-baseline.sh
src/: doctor.rs  lib.rs  paths.rs  process.rs
src/apply/: dispatch.rs  engine.rs  mod.rs  types.rs
src/backends/: backlight.rs  ddc.rs  mod.rs
src/config/: compat.rs  discovered.rs  error.rs  io.rs  mod.rs  model.rs  template.rs  tests.rs  validate.rs
src/ddcutil/: client.rs  command.rs  mod.rs  parser.rs  version.rs
src/discovery/: mod.rs  model.rs  probe.rs  render.rs  runner.rs  tests.rs
src/ipc/: mod.rs  protocol.rs  socket.rs  transport.rs
src/policy/: math.rs  milestones.rs  mod.rs  modifiers.rs
src/runtime/: fade.rs  idle.rs  mod.rs  orchestrator.rs  orchestrator.rs.orig  orchestrator.rs.rej
src/solar/: ephemeris.rs  mod.rs  search.rs  types.rs
src/state/: mod.rs  persist.rs  transitions.rs  types.rs
src/tui/: actions.rs  app.rs  cities.json  cities.rs  form.rs  mod.rs  model.rs  runtime.rs  theme.rs  ui.rs  update.rs  worker.rs
src/tui/ui/: chrome.rs  monitors.rs  settings.rs  weather.rs  weather_model.rs
src/weather/: client.rs  engine.rs  mod.rs  openweather.rs  smoothing.rs  types.rs
tests/: installer.sh
(+9 files in other folders)
