[package]
name = "sunreactor"
version = "0.11.0"
edition = "2021"
description = "sunreactor daemon and CLI for adaptive brightness control"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4"
crossterm = { version = "0.27", optional = true }
deunicode = "1.6.2"
libc = "0.2"
ratatui = { version = "0.26", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.4.4"
thiserror = "2.0.18"
toml = "0.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tui-input = { version = "0.15.0", optional = true }
ureq = "2.10"
rustix = { version = "0.38", features = ["fs", "net", "process"] }
tz-rs = "0.6.14"
tempfile = "3.10.1"
wait-timeout = "0.2.1"

[features]
default = ["tui"]
tui = ["ratatui", "crossterm", "tui-input"]

[lib]
name = "sunreactor"
path = "src/lib.rs"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
